--- a/pom.xml
+++ b/pom.xml
@@ -1559,5 +1559,4 @@
          <version>[7.0.0,7.0.11]</version>
          <optional>true</optional>
       </dependency>
-   </dependencies>
-</project>
+   </dependencies></project>
