--- a/pom.xml
+++ b/pom.xml
@@ -135,24 +135,28 @@
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-parent</artifactId>
          <version>3.1.9</version>
+         <type>pom</type>
          <optional>true</optional>
       </dependency>
       <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>apache-cxf</artifactId>
          <version>3.1.9</version>
+         <type>pom</type>
          <optional>true</optional>
       </dependency>
       <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf-rt</artifactId>
          <version>3.1.9</version>
+         <type>pom</type>
          <optional>true</optional>
       </dependency>
       <dependency>
          <groupId>org.apache.cxf</groupId>
          <artifactId>cxf</artifactId>
          <version>3.1.9</version>
+         <type>pom</type>
          <optional>true</optional>
       </dependency>
       <dependency>
