--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.blackducksoftware.test</groupId>
    <artifactId>example-maven-travis</artifactId>
-   <version>0.1.0-SNAPSHOT</version>
+   <version>0.2.0-SNAPSHOT</version>
    <name>Black Duck CoPilot Example for Maven/Travis CI</name>
    <description>Provide an example of configuring a Maven project to use the Black Duck CoPilot application</description>
    <url>https://github.com/BlackDuckCoPilot/example-maven-travis</url>
@@ -127,6 +127,12 @@
          <artifactId>cxf</artifactId>
          <version>3.1.9</version>
          <type>pom</type>
+         <optional>true</optional>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.nifi</groupId>
+         <artifactId>nifi-commons</artifactId>
+         <version>1.4.0</version>
          <optional>true</optional>
       </dependency>
    </dependencies>
