--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.blackducksoftware.test</groupId>
-   <artifactId>example-maven-travis</artifactId>
+   <artifactId>example-maven-travis-2</artifactId>
    <version>0.2.0-SNAPSHOT</version>
    <name>Black Duck CoPilot Example for Maven/Travis CI</name>
    <description>Provide an example of configuring a Maven project to use the Black Duck CoPilot application</description>
